include/C/ox/jdmatrix.h

void   JDCALL VecrCopyMat(VECTOR vDest, MATRIX mSrc, int cR, int cC);
void   JDCALL VeccCopyMat(VECTOR vDest, MATRIX mSrc, int cR, int cC);
VECTOR JDCALL VecAllocBlock(int cX);
void   JDCALL VecFreeBlock(VECTOR vX);
VECTOR JDCALL VecDupBlock(VECTOR vSrc, int cX);
VECTOR JDCALL VecCopy(VECTOR vDest, VECTOR vSrc, int cX);
/* jdsort.c */
int    JDCALL SortVec(VECTOR vX, int cX);
int    JDCALL SortMatCol(MATRIX mX, int iCol, int cX);
int    JDCALL SortmXtByVec(int cT, VECTOR vBy, MATRIX mXt, int cX);
int    JDCALL SortmXByCol(int iCol, MATRIX mX, int cT, int cX);
void   JDCALL SortVecByVec(int cT, VECTOR vBy, VECTOR vAc);