include/C/ox/Ox.java

	public static native int OxValGetVecr(Pointer pv, double[] vX);
	public static native int OxValHasFlag(Pointer pv, int iFlag);
	public static native int OxValHasType(Pointer pv, int iType);
	public static native int OxValRows(Pointer pv);
	public static native void OxValSetBlob(Pointer pv, int i1, int i2, Pointer p);
	public static native void OxValSetDouble(Pointer pv, double dVal);
	public static native void OxValSetInt(Pointer pv, int iVal);
	public static native void OxValSetMat(Pointer pv, Pointer mVal, int r, int c);
	public static native void OxValSetMatZero(Pointer pv, int r, int c);
	public static native void OxValSetNull(Pointer pv);
	public static native void OxValSetString(Pointer pv, String sVal);
	public static native void OxValSetZero(Pointer pv);
	public static native void OxValSetVecc(Pointer pv, double[] vX, int r, int c);
	public static native void OxValSetVecr(Pointer pv, double[] vX, int r, int c);
	public static native int OxValSizec(Pointer pv);
	public static native int OxValSizer(Pointer pv);
	public static native int OxValSizerc(Pointer pv);
	public static native void OxValTransfer(Pointer pv);
	public static native int OxValType(Pointer pv);
	public static native void QSortVecMat(double[] VECTOR1, double[] VECTOR2, Pointer MATRIX1, int int1, int int2, int int3);
	public static native void RanDirichlet(double[] vX, double[] vAlpha, int cAlpha);
	public static native int RanGetSeed(int[] piSeed, int cSeed);
	public static native void RanInit(Pointer pRan);
	public static native void RanSetRan(String sRan);
	public static native void RanSetSeed(int[] piSeed, int cSeed);
	public static native void RanSubSample(double[] vU, int cU, int cN);
	public static native void RanUorder(double[] vU, int cU);
	public static native void RanWishart(Pointer mX, int cX, int cT);
	public static native void SetInf(DoubleByReference pd);
	public static native void SetInvertEps(double dEps);
	public static native void SetNaN(DoubleByReference pd);
	public static native void SetOxPipe(int cPipe);
	public static native int SortMatCol(Pointer mX, int iCol, int cX);
	public static native int SortmXByCol(int iCol, Pointer mX, int cT, int cX);
	public static native int SortmXtByVec(int cT, double[] vBy, Pointer mXt, int cX);
	public static native int SortVec(double[] vX, int cX);
	public static native void SortVecByVec(int cT, double[] vBy, double[] vAc);
	public static native Pointer SOxGetTypeName(int iType);
	public static native Pointer SOxIntFunc();
	public static native int ToeplitzSolve(double[] VECTOR1, int int1, int int2, Pointer MATRIX1, int int3, double[] v_1);
	public static native DoubleByReference VecAllocBlock(int cX);
	public static native void VeccCopyMat(double[] vDest, Pointer mSrc, int cR, int cC);
	public static native DoubleByReference VecCopy(double[] vDest, double[] vSrc, int cX);
	public static native DoubleByReference VecDiscretize(double[] vY, int cY, double dMin, double dMax, double[] vDisc, int cM, double[] vT, int iOption);
	public static native DoubleByReference VecDupBlock(double[] vSrc, int cX);
	public static native void VecFreeBlock(double[] vX);
	public static native void VecrCopyMat(double[] vDest, Pointer mSrc, int cR, int cC);
	public static native DoubleByReference VecTranspose(double[] vA, int cM, int cN);

	public interface CallbackOxExit extends StdCallCallback {
	    void NewOxExit(int code);
	}
	public static native void SetOxExit(Ox.CallbackOxExit pfnNewOxExit);
	
	public static native void SetOxDraw(Pointer pfnNewOxDraw);
	public static native void SetOxDrawWindow(Pointer pfnNewOxDrawWindow);
	public static native void SetOxGets(Pointer pfnNewOxGets);
	public static native void SetOxMessage(Pointer pfnNewOxMessage);
	public static native void SetOxPuts(Pointer pfnNewOxPuts);
	public static native void SetOxRunMessage(Pointer pfnNewOxRunMessage);
	public static native void SetOxTextWindow(Pointer pfnNewOxTextWindow);
	
	public enum OxTypes
	{
		OX_INT(1),
		OX_DOUBLE(2),
		OX_MATRIX(3),
		OX_STRING(4),
		OX_ARRAY(5),
		OX_FUNCTION(6),
		OX_CLASS(7),
		OX_VECTOR(8),
		OX_INTFUNC(9),
		OX_RANGE(10),
		OX_FILE(11),
		OX_IMPORT(12),
		OX_LAMBDA(13),
		OX_BLOB(14),
		OX_RETURN(64),

		OX_NULL(0x100),
		OX_VALUE(0x200),
		OX_CONST(0x400),
		OX_RESERVED(0x800),
		OX_EXTERN(0x1000),
		OX_GLOBAL(0x2000),
		OX_STATDECL(0x4000),
		OX_INLINE(0x8000),
		OX_KEYWORD(0x8000),
		OX_MEMBER(0x10000),
		OX_STATIC(0x20000),
		OX_VIRTUAL(0x40000),
		OX_PUBLIC(0x80000),
		OX_INDEX(0x100000),
		OX_ADDRESS(0x200000),
		OX_ARGUMENT(0x400000),
		OX_VARARGS(0x800000),
		OX_SERIAL(0x1000000),
		OX_VECMAT(0x2000000),
		OX_VECRANGE(0x4000000),
		OX_IDXSCALAR(0x8000000),
		OX_INTERNAL(0x10000000);

		private int intValue;
		private static java.util.HashMap<Integer, OxTypes> mappings;
		private static java.util.HashMap<Integer, OxTypes> getMappings()
		{
			if (mappings == null)
			{
				synchronized (OxTypes.class)
				{
					if (mappings == null)
					{
						mappings = new java.util.HashMap<Integer, OxTypes>();
					}
				}
			}
			return mappings;
		}

		private OxTypes(int value)
		{
			intValue = value;
			OxTypes.getMappings().put(value, this);
		}

		public int getValue()
		{
			return intValue;
		}

		public static OxTypes forValue(int value)
		{
			return getMappings().get(value);
		}
	}

	public enum OxErrors
	{
		ER_RUNTIME,
		ER_FATAL,
		ER_LIBFUNC,
		ER_STACKOVERFLOW,
		ER_OM,
		ER_NOFUNC,
		ER_DIVIDE,
		ER_EXPOBJECT,
		ER_UNDECLMEM,
		ER_SINGULAR,
		ER_BADOP,
		ER_INCTYPE,
		ER_NULL,
		ER_ARGS,
		ER_BADTYPE,
		ER_IDXBOUND,
		ER_IDXTYPE,
		ER_EXPSCALAR,
		ER_EXPSCALMAT,
		ER_EXPSCALSTR,
		ER_CONSTAS,
		ER_EXPCLASS,
		ER_UNDEFMEMFU,
		ER_NOMEMFUNC,
		ER_UNDEFFU,
		ER_INVALIDCLASS,
		ER_CONSTDEL,
		ER_ADDRESS,
		ER_NEGATIVE,
		ER_SVD,
		ER_CAST,
		ER_IDXRANGE,
		ER_IDXARRAY,
		ER_POWOVERFLOW,
		ER_ARGSAME,
		ER_NOCALLMEM,
		ER_EXPFUNC,
		ER_ARGUMENT,
		ER_IDXMISSING,
		ER_SIZENEGATIVE,
		ER_ARGERROR,
		ER_CALLBACK,
		ER_INVALID,
		ER_OVERFLOW,
		ER_FPEXCEPTION,
		ER_CASTINT,
		ER_CASTDBL,
		ER_CASTMAT,
		ER_CASTVEC,
		ER_USER1,
		ER_USER2,
		ER_USER3,
		ER_USER4,
		ER_USER5,
		ER_USER6,
		ER_EXPVECTOR,
		ER_JSTINVALID,
		ER_ARRAYMULTI,
		ER_NOPIPE,
		ER_USERABORT,
		ER_EXPPUBLIC,
		ER_EXSTRING,
		ER_CONSTUSE,
		ER_LAMBDA,
		ER_VARCHANGED,
		ER_STACK,
		ER_FOR,
		ER_FOR_INF,
		ER_LAST;

		public int getValue()
		{
			return this.ordinal();
		}

		public static OxErrors forValue(int value)
		{
			return values()[value];
		}
	}

	public enum OxWarnings
	{
		WR_DECFAILED,
		WR_ITMAX,
		WR_CONCAT,
		WR_CASTINT,
		WR_VECIDXMAT,
		WR_DETERMINANT,
		WR_USER;

		public int getValue()
		{
			return this.ordinal();
		}

		public static OxWarnings forValue(int value)
		{
			return values()[value];
		}
	}

}
 